tests/integration/snapshots/integration__commands__format__OBJECT_KEY_UNICODE_ESCAPE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"\u006bey": "value"}
stdout ---
{
  "\u006bey": "value"
}

stderr ---
