tests/integration/snapshots/integration__commands__format__OBJECT_LEADING_NEWLINE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{
"key": "val"}
stdout ---
{ "key": "val" }

stderr ---
