tests/integration/snapshots/integration__commands__format__OBJECT_NUMERIC_STRING_KEY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"1": "a"}
stdout ---
{ "1": "a" }

stderr ---
