tests/integration/snapshots/integration__commands__format__OBJECT_ONLY_NEWLINE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{
}
stdout ---
{}

stderr ---
