tests/integration/snapshots/integration__commands__format__OBJECT_SINGLE_KEY_ROOT.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"k": "v"}
stdout ---
{
  "k": "v"
}

stderr ---
