tests/integration/snapshots/integration__commands__format__OBJECT_WITH_EXPANDED_AND_NON_EXPANDED_ARR.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---

{
    "hi1": ["rust is a must","rust is a must","rust is a must","rust is a must", "rust is a must"],
    "hi2": ["rust is a must","rust is a must","rust is a must", "rust is a must"]
}

stdout ---
{
  "hi1": [
    "rust is a must",
    "rust is a must",
    "rust is a must",
    "rust is a must",
    "rust is a must"
  ],
  "hi2": [
    "rust is a must",
    "rust is a must",
    "rust is a must",
    "rust is a must"
  ]
}

stderr ---
