tests/integration/snapshots/integration__commands__format__OBJECT_WITH_NESTED_FILL_ARRAY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"deeply":{"nested":{"key":[12345,123434,343434,343434,3433434,34343434,34433434,34343434,343443,34433434,344334]}}}
stdout ---
{
  "deeply": {
    "nested": {
      "key": [
        12345, 123434, 343434, 343434, 3433434, 34343434, 34433434, 34343434,
        343443, 34433434, 344334
      ]
    }
  }
}

stderr ---
