tests/integration/snapshots/integration__commands__format__PRETTIER_ARRAY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[[1, null], [null], [0], [false], [""]]
stdout ---
[[1, null], [null], [0], [false], [""]]

stderr ---
